--- a/python-app/templates/testafter.html
+++ b/python-app/templates/testafter.html
@@ -135,7 +135,7 @@
 					<!-- footer logo -->
 					<div class="col-md-6">
 						<div class="footer-logo">
-							<a class="logo" style="font-size: 30px;" href="main.php">Career.ly</a>
+							<a class="logo" style="font-size: 30px;" href="main.php">Career System</a>
 						</div>
 					</div>
 					<!-- footer logo -->
